# Text2CAD

./: .gitignore  ReadME.md  main.py  pyproject.toml  requirements.txt
Experiments/: HelicalTorsionSpring.md  Truss.md  beam.md  cube.md  featherKey.md  gear.md  helicalgear.md  pyramid.md  thread.md  woodruffKey.md
Experiments/HelicalTorsionSpring/: HelicalTorsionSpring.scad  HelicalTorsionSpring2.scad  HelicalTorsionSpring3.scad
Experiments/beam/: TBeam.scad  beam.scad  channelBeam.scad  channelBeam2.scad
Experiments/cube/: cube.scad
Experiments/featherKey/: featherKey.scad
Experiments/gear/: spur_gear.scad  spur_gear2.scad  spur_gear3.scad  spur_gear4.scad  spur_gear5.scad  spur_gear_aiprompt.scad
Experiments/helicalGear/: helical_gear.scad  helical_gear2.scad  helical_gear3.scad  helical_gear4.scad
Experiments/pyramid/: model.scad
Experiments/thread/: thread.scad  thread2.scad  thread3.scad  thread4.scad
Experiments/truss/: cubeTruss.scad  cubeTruss2.scad  cubeTruss3.scad  cubeTruss4.scad
Experiments/woodruffkey/: WoodruffKey.scad  WoodruffKey2.scad
src/cadgen/: __init__.py  __main__.py  cli.py  core.py
